fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html{
     width: 100%;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
 }
 
 body{
@@ -13,6 +13,7 @@ body{
     height: 100%;
     width: 100%;
     margin:0 30%;
+    overflow: hidden;
 }
 
 
@@ -25,7 +26,7 @@ body{
     /* width: 30%; */
     /* gap: 10px; */
     border: 2px solid black;
-   
+    overflow: hidden;
 } 
 
 .display{
@@ -35,6 +36,7 @@ body{
     border: 2px solid black;
     margin: 2%;
     justify-content: center;
+    overflow: hidden;
     
 }
 
